# scientist-monai-moat

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml
.github/workflows/: ci.yml
artifacts/reports/: ai_prediction_ledger_schema.sql  informed_consent_template.md  irb_protocol_template.md
deploy/modal/: README.md  TRAINING_APPS.md  cbis_ddsm_detection_app.py  clinicalbert_app.py  luna16_finetune_app.py  medsiglip_app.py  txgemma_app.py
docs/: PROD_FLIP_CHECKLIST_v0.4.1.md  PROGRESS_LEDGER.json
docs/audit/: AK_MBD4_INTEGRATION.md  apex_prod_v1.md  end_to_end_audit_v0_3_0.md  real_text_retrain_v51.md
docs/deploys/: v0.5.1_modal_crispro_prod_verify.md
docs/model_cards/: biopsy_medsiglip_probe.md  errata.md  frontend_spa.md  medgemma_1_27b.md  medgemma_1_5_4b.md  medsiglip_448.md  monai_detector_heuristic.md  nsclc_lung_heuristic_v0.md  report_parser_clinicalbert_v1.md  report_parser_clinicalbert_v3_real_v51.md  siglip_base_patch16_224.md  therapy_nccn_lite.md  txgemma_9b_chat.md
docs/proofs/: cbis_ddsm_logreg_v1_metrics.json
docs/regulatory/: WEIGHT_REDISTRIBUTION.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  main.tsx  settings.ts
models/: cbis_ddsm_logreg_v1.joblib
scripts/: audit_ak_bundle.py  create_demo_render_service.py  embed_cbis_ddsm.py  eval_report_parser_clinicalbert.py  llm_annotate.py  train_cbis_ddsm_logreg.py  update_progress_ledger.py  upload_cbis_ddsm_to_modal.py  upload_luna16_to_modal.py
src/oncology_arbiter/: __init__.py
tests/: conftest.py
tests/data/: test_api_real_dicom.py  test_cbis_ddsm_ingest.py  test_mammography_real_dicoms.py
tests/fixtures/: download_cbis_ddsm_fixtures.py
tests/integration/: test_arxiv_live.py  test_europe_pmc_live.py  test_medsiglip_modal_client.py  test_pubmed_live.py  test_screening_endpoint_modal_smoke.py  test_web_fetch_live.py
tests/models/: test_hai_def.py  test_siglip_baseline.py
tests/nlp/: test_biopsy_report_parse_wire.py  test_clinicalbert_e2e.py  test_report_parser_v2.py
tests/regression/: test_clinicalbert_f1_floor.py  test_clinicalbert_modal_wire.py  test_clinicalbert_real_text_f1.py  test_clinicalbert_real_text_f1_v51.py
tests/unit/: test_agents_supervisor.py  test_api_arbiter_wiring.py  test_api_model_cards_and_artifacts.py  test_arbiter_l2_logistic.py  test_auth_bootstrap.py  test_biopsy_medsiglip_probe.py  test_biopsy_report_parser_wiring.py  test_biopsy_therapy_endpoints.py  test_biopsy_therapy_gate_report.py  test_cancer_selector.py  test_case_full_co_scientist_monai.py  test_case_full_nsclc_api.py  test_cbis_ddsm_detection.py  test_co_scientist.py  test_co_scientist_endpoint.py  (+38 more)
tumor_board_frontend/: README.md  acceptance_tests.json  component_spec.json  contract_snapshot.json  index.html  quarantine_test_harness.json  run_acceptance_tests.py
(+139 files in other folders)
