[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oncology-arbiter"
version = "0.3.0-alpha"
description = "Research-use breast oncology multi-stage reasoning platform (screening + biopsy + therapy)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Phylo" }]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
  # API surface
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.6",
  "python-multipart>=0.0.9",
  # Numerics + imaging preprocessing
  "numpy>=1.26",
  "SimpleITK>=2.4",
  "pydicom>=2.4",
  "Pillow>=10",
  "scikit-learn>=1.4",
  # L2 evidence tools (pubmed / arxiv / europe_pmc / web_fetch)
  "httpx>=0.27",
  "trafilatura>=1.12",       # HTML text extraction in web_fetch
  "pypdf>=4.3",              # PDF text extraction in web_fetch
  # science-skills SKILL.md frontmatter parsing
  "pyyaml>=6",
  # SaaS observability + rate limiting
  "slowapi>=0.1.9",
  "prometheus-fastapi-instrumentator>=7.0",
  # Demo case fixture download (v0.2.2 /v1/demo/case endpoint)
  #   Pure-Python client, ~1 MB, Apache-2.0. Base dep (not [ml]) because the
  #   demo endpoint needs to fetch CBIS-DDSM at runtime on hosts that don't
  #   ship the fixture in the container (e.g. Render).
  "huggingface_hub>=0.24",
  # v0.4.0-alpha: llm_client.py in oncology_arbiter.models imports requests
  # for the Gemma HTTP client. Was implicit before (worker image shipped
  # it) but the fresh CI runner does not, so make it explicit.
  "requests>=2.31",
  # v0.4.0-alpha Path C: parenchyma_mask.py uses scipy.ndimage for
  # morphological operations and connected-components. Existing modules
  # (lung/pipeline.py, models/monai_detector.py) also import scipy — this
  # was previously an implicit transitive dep via numpy/monai stacks,
  # which is not stable across CI runners without ML extras.
  "scipy>=1.11",
]

[project.optional-dependencies]
ml = [
  "torch>=2.3",
  "monai>=1.3",
  "transformers>=4.44",
]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.24",
  "ruff>=0.6",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers"
testpaths = ["tests"]
markers = [
    "integration: hits live external APIs (PubMed / arXiv / Europe PMC)",
    "models: downloads and runs HuggingFace models (multi-GB)",
    "data: requires real mammography data on disk (CBIS-DDSM / EMBED)",
    "slow: takes > 30 seconds",
]
